<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="15dp"
    app:cardBackgroundColor="@color/cardColorRequest"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TeacherUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_with_dots"
                android:textColor="@color/myblue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/studentname"
                android:textColor="@color/myblue"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject_with_dots"
                android:textColor="@color/myblue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/teacher_subject"
                android:textColor="@color/myblue"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservedtime_with_dots"
                android:textColor="@color/myblue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/time"
                android:textColor="@color/myblue"
                android:textSize="20sp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <Button
                android:background="@drawable/round_border"
                android:layout_width="match_parent"
                android:id="@+id/acceptBtn"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/accept"
                android:textSize="15dp"/>

            <Button
                android:background="@drawable/round_border"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:id="@+id/rejectBtn"
                android:layout_height="wrap_content"
                android:text="@string/reject"
                android:textColor="@color/white"
                android:textSize="15dp" />





        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >

            <TextView
                android:id="@+id/circle_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/circle"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/stateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/circle_image"
                android:gravity="center_vertical"
                android:text="gjghjhghjhg" />

            <ImageView
                android:id="@+id/deletRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:src="@drawable/ic_baseline_delete_24" />
        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>