<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_marginTop="50dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="70dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/cardColorRequest"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginVertical="6dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">
<TextView
    android:gravity="center"
    android:layout_marginBottom="15dp"
    android:layout_marginTop="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Teacher_Information"
    android:textColor="@color/myblue"
    android:textSize="30sp"
    android:fontFamily="@font/bitter"
    android:textStyle="bold"
    />

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TeacherUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_with_dots"
                android:textColor="@color/myblue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/teachername"
                android:textColor="@color/myblue"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject_with_dot"
                android:textColor="@color/myblue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/teacher_subject"
                android:textColor="@color/myblue"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/major_with_dot"
                android:textColor="@color/myblue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/major"
                android:textColor="@color/myblue"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time_with_dot"
                android:textColor="@color/myblue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="start"
                android:textColor="@color/myblue"
                android:textSize="20sp" />

        </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time_with_dot"
            android:textColor="@color/myblue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/endTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="end"
            android:textColor="@color/myblue"
            android:textSize="20sp" />
    </LinearLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >



        <Spinner
            android:id="@+id/from"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />

            <Button
                android:id="@+id/schedulebtn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_border"
                android:text="@string/request_session"
                android:textColor="@color/design_default_color_background"
                android:textSize="10sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/watsbtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/watsup"
                android:gravity="center_vertical"
                android:textSize="13sp" />

        </RelativeLayout>





    </LinearLayout>


</androidx.cardview.widget.CardView>