<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="15dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/cardColorRequest"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="6dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:fontFamily="@font/bitter"
                android:id="@+id/TeacherUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_with_dots"
                android:textColor="@color/myblue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/bitter"
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/teachername"
                android:textColor="@color/myblue"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:fontFamily="@font/bitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject_with_dpts"
                android:textColor="@color/myblue"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:fontFamily="@font/bitter"
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/teacher_subject"
                android:textColor="@color/myblue"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>