<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateTeacher">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--        android:layout_marginTop="32dp"     -->
        <View
            android:id="@+id/topView"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:background="@color/pige"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:background="@drawable/wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topView" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/top_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/capb" />

        <TextView
            android:id="@+id/topText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:text="@string/profile"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/topView"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/TeacherUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/not_so_round_border"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <EditText
            android:id="@+id/major"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/not_so_round_border"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/enter_your_major"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TeacherUserName"
            tools:layout_editor_absoluteY="494dp" />

        <Spinner

            android:id="@+id/subject"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:ems="10"
            android:entries="@array/Subject"
            android:hint="@string/subject"
            android:padding="16dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/major" />

        <Spinner
            android:id="@+id/uplevel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:ems="10"
            android:entries="@array/Level"
            android:padding="16dp"
            android:spinnerMode="dropdown"
            android:text="@string/level"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/subject"
            app:layout_constraintTop_toBottomOf="@+id/major" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/not_so_round_border"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/start_time"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.122"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subject" />

        <TextView
            android:id="@+id/endTime"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/not_so_round_border"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/end_time"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startIcon"
            app:layout_constraintTop_toBottomOf="@+id/uplevel" />

        <ImageButton
            android:id="@+id/startIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_time"
            app:layout_constraintBottom_toBottomOf="@+id/startTime"
            app:layout_constraintEnd_toEndOf="@+id/startTime"
            app:layout_constraintHorizontal_bias="0.931"
            app:layout_constraintStart_toStartOf="@+id/startTime"
            app:layout_constraintTop_toTopOf="@+id/startTime"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/endIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_time"
            app:layout_constraintBottom_toBottomOf="@+id/endTime"
            app:layout_constraintEnd_toEndOf="@+id/endTime"
            app:layout_constraintHorizontal_bias="0.931"
            app:layout_constraintStart_toStartOf="@+id/endTime"
            app:layout_constraintTop_toTopOf="@+id/endTime"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/not_so_round_border"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/your_number"
            android:inputType="number"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endTime" />


        <Button
            android:id="@+id/UpdateTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_border"
            android:fontFamily="@font/bitter"
            android:text="@string/update"
            android:textColor="#E1E9ED"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumber" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
